ReportGeneration Update