@@ -1,57 +1,45 @@
+// src/main/java/com/example/stationerymgntbe/controller/OrderController.java
 package com.example.stationerymgntbe.controller;
 
 import com.example.stationerymgntbe.dto.OrderDTO;
 import com.example.stationerymgntbe.dto.OrderInput;
 import com.example.stationerymgntbe.dto.OrderItemDTO;
-import com.example.stationerymgntbe.dto.UserResponseDTO;
 import com.example.stationerymgntbe.service.OrderService;
 import com.example.stationerymgntbe.service.UserService;
 
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
 import java.security.Principal;
 import java.time.LocalDate;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 @RestController
 @RequestMapping("/api/orders")
+@RequiredArgsConstructor
 public class OrderController {
 
-    @Autowired
-    private OrderService orderService;
-
-    @Autowired
-    private UserService userService;
+    private final OrderService orderService;
+    private final UserService userService;
 
     @GetMapping
-    @PreAuthorize("hasRole('admin')")
+    @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<List<OrderDTO>> getAllOrders() {
         return ResponseEntity.ok(orderService.getAllOrders());
     }
 
     @GetMapping("/{orderId}/items")
     public ResponseEntity<List<OrderItemDTO>> getOrderItems(@PathVariable Integer orderId) {
-        try {
-            List<OrderItemDTO> orderItems = orderService.getOrderItems(orderId);
-            return ResponseEntity.ok(orderItems);
-        } catch (RuntimeException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(null);
-        }
+        return ResponseEntity.ok(orderService.getOrderItems(orderId));
     }
 
     @PostMapping
     public ResponseEntity<OrderDTO> createOrder(@RequestBody OrderInput orderInput) {
-        try {
-            return ResponseEntity.ok(orderService.createOrder(orderInput));
-        } catch (RuntimeException e) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(null);
-        }
+        System.out.println("Incoming orderInput: " + orderInput); // debug
+        return ResponseEntity.ok(orderService.createOrder(orderInput));
     }
 
     @GetMapping("/check-period")
@@ -66,43 +54,33 @@ public class OrderController {
 
     @PutMapping("/{orderId}/approve")
     public ResponseEntity<OrderDTO> approveOrder(@PathVariable Integer orderId) {
-        try {
-            return ResponseEntity.ok(orderService.approveOrder(orderId));
-        } catch (RuntimeException e) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(null);
-        }
+        return ResponseEntity.ok(orderService.approveOrder(orderId));
     }
 
     @PutMapping("/{orderId}/reject")
     public ResponseEntity<OrderDTO> rejectOrder(@PathVariable Integer orderId, @RequestParam String comment) {
-        try {
-            return ResponseEntity.ok(orderService.rejectOrder(orderId, comment));
-        } catch (RuntimeException e) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(null);
-        }
+        return ResponseEntity.ok(orderService.rejectOrder(orderId, comment));
     }
 
     @GetMapping("/pending-count")
     public ResponseEntity<Map<String, Integer>> getPendingOrdersCount() {
-        return ResponseEntity.ok(Collections.singletonMap("count", orderService.getPendingOrdersCount()));
+        return ResponseEntity.ok(Map.of("count", orderService.getPendingOrdersCount()));
     }
 
     @GetMapping("/monthly-count")
-    public ResponseEntity<Map<String, Integer>> getMonthlyOrdersCount() {
+    public ResponseEntity<Integer> getMonthlyOrdersCount() {
         LocalDate now = LocalDate.now();
-        return ResponseEntity.ok(Collections.singletonMap("count",
-                orderService.getMonthlyOrdersCount(now.getYear(), now.getMonthValue())));
+        return ResponseEntity.ok(orderService.getMonthlyOrdersCount(now.getYear(), now.getMonthValue()));
     }
 
     @GetMapping("/latest")
     public ResponseEntity<OrderDTO> getLatestOrder(Principal principal) {
-        UserResponseDTO userResponseDTO = userService.getCurrentUser();
-        Integer departmentId = userResponseDTO.getEmployee().getDepartment().getDepartmentId();
+        Integer departmentId = userService.getCurrentUser().getDepartmentId();
         return ResponseEntity.ok(orderService.getLatestOrder(departmentId));
     }
 
     @GetMapping("/reports")
-    @PreAuthorize("hasRole('admin')")
+    @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<List<OrderDTO>> getMonthlyReport(@RequestParam Integer month, @RequestParam Integer year) {
         return ResponseEntity.ok(orderService.getOrdersByMonthAndYear(month, year));
     }
